project(asio-examples)

add_executable(cpp11to20-chat-chat_client cpp11to20/chat/chat_client.cpp)
add_executable(cpp11to20-chat-chat_server cpp11to20/chat/chat_server.cpp)
add_executable(cpp11to20-buffers-reference_counted cpp11to20/buffers/reference_counted.cpp)
add_executable(cpp11to20-buffers-client-for_timeserver cpp11to20/buffers/client_for_timeserver.cpp)
add_executable(cpp11to20-spawn-parallel_grep cpp11to20/spawn/parallel_grep.cpp)
add_executable(cpp11to20-fork-daemon cpp11to20/fork/daemon.cpp)

# 下面一堆add_executable用脚本generate.py生成，然后再手动编辑部分

add_executable(cpp20-invocation-completion_executor cpp20/invocation/completion_executor.cpp)
file(GLOB SRC_CPP20_TYPE_ERASE cpp20/type_erasure/*.cpp)
add_executable(cpp20-type_erasure ${SRC_CPP20_TYPE_ERASE})
add_executable(cpp20-operations-composed_5 cpp20/operations/composed_5.cpp)
add_executable(cpp20-operations-composed_4 cpp20/operations/composed_4.cpp)
add_executable(cpp20-operations-composed_6 cpp20/operations/composed_6.cpp)
add_executable(cpp20-operations-composed_7 cpp20/operations/composed_7.cpp)
add_executable(cpp20-operations-composed_3 cpp20/operations/composed_3.cpp)
add_executable(cpp20-operations-composed_2 cpp20/operations/composed_2.cpp)
add_executable(cpp20-operations-composed_1 cpp20/operations/composed_1.cpp)
add_executable(cpp20-operations-c_callback_wrapper cpp20/operations/c_callback_wrapper.cpp)
add_executable(cpp20-operations-callback_wrapper cpp20/operations/callback_wrapper.cpp)
add_executable(cpp20-operations-composed_8 cpp20/operations/composed_8.cpp)
add_executable(cpp20-coroutines-echo_server_with_as_tuple_default cpp20/coroutines/echo_server_with_as_tuple_default.cpp)
add_executable(cpp20-coroutines-echo_server_with_default cpp20/coroutines/echo_server_with_default.cpp)
add_executable(cpp20-coroutines-echo_server cpp20/coroutines/echo_server.cpp)
add_executable(cpp20-coroutines-echo_server_with_as_single_default cpp20/coroutines/echo_server_with_as_single_default.cpp)
add_executable(cpp20-coroutines-echo_server_with_deferred cpp20/coroutines/echo_server_with_deferred.cpp)
add_executable(cpp20-coroutines-echo_server_with_deferred_default cpp20/coroutines/echo_server_with_deferred_default.cpp)
add_executable(cpp20-coroutines-refactored_echo_server cpp20/coroutines/refactored_echo_server.cpp)
add_executable(cpp20-coroutines-chat_server cpp20/coroutines/chat_server.cpp)
add_executable(cpp20-coroutines-timeout cpp20/coroutines/timeout.cpp)
add_executable(cpp20-channels-mutual_exclusion_2 cpp20/channels/mutual_exclusion_2.cpp)
add_executable(cpp20-channels-throttling_proxy cpp20/channels/throttling_proxy.cpp)
add_executable(cpp20-channels-mutual_exclusion_1 cpp20/channels/mutual_exclusion_1.cpp)
add_executable(cpp11-invocation-prioritised_handlers cpp11/invocation/prioritised_handlers.cpp)
add_executable(cpp11-fork-daemon cpp11/fork/daemon.cpp)
add_executable(cpp11-fork-process_per_connection cpp11/fork/process_per_connection.cpp)
add_executable(cpp11-handler_tracking-async_tcp_echo_server cpp11/handler_tracking/async_tcp_echo_server.cpp)
add_executable(cpp11-buffers-reference_counted cpp11/buffers/reference_counted.cpp)
# ssl的暂时去掉
#add_executable(cpp11-ssl-client cpp11/ssl/client.cpp)
#add_executable(cpp11-ssl-server cpp11/ssl/server.cpp)
add_executable(cpp11-socks4-sync_client cpp11/socks4/sync_client.cpp)
add_executable(cpp11-echo-blocking_tcp_echo_server cpp11/echo/blocking_tcp_echo_server.cpp)
add_executable(cpp11-echo-blocking_udp_echo_client cpp11/echo/blocking_udp_echo_client.cpp)
add_executable(cpp11-echo-async_udp_echo_server cpp11/echo/async_udp_echo_server.cpp)
add_executable(cpp11-echo-async_tcp_echo_server cpp11/echo/async_tcp_echo_server.cpp)
add_executable(cpp11-echo-blocking_udp_echo_server cpp11/echo/blocking_udp_echo_server.cpp)
add_executable(cpp11-echo-blocking_tcp_echo_client cpp11/echo/blocking_tcp_echo_client.cpp)
add_executable(cpp11-multicast-sender cpp11/multicast/sender.cpp)
add_executable(cpp11-multicast-receiver cpp11/multicast/receiver.cpp)
add_executable(cpp11-futures-daytime_client cpp11/futures/daytime_client.cpp)
add_executable(cpp11-chat-chat_client cpp11/chat/chat_client.cpp)
add_executable(cpp11-chat-chat_server cpp11/chat/chat_server.cpp)
add_executable(cpp11-nonblocking-third_party_lib cpp11/nonblocking/third_party_lib.cpp)
add_executable(cpp11-deferred-deferred_1 cpp11/deferred/deferred_1.cpp)
add_executable(cpp11-deferred-deferred_2 cpp11/deferred/deferred_2.cpp)
add_executable(cpp11-timers-time_t_timer cpp11/timers/time_t_timer.cpp)
file(GLOB SRC_CPP11_TYPE_ERASE cpp11/type_erasure/*.cpp)
add_executable(cpp11-type_erasure ${SRC_CPP11_TYPE_ERASE})
add_executable(cpp11-timeouts-blocking_token_tcp_client cpp11/timeouts/blocking_token_tcp_client.cpp)
add_executable(cpp11-timeouts-async_tcp_client cpp11/timeouts/async_tcp_client.cpp)
add_executable(cpp11-timeouts-blocking_udp_client cpp11/timeouts/blocking_udp_client.cpp)
add_executable(cpp11-timeouts-blocking_tcp_client cpp11/timeouts/blocking_tcp_client.cpp)
add_executable(cpp11-timeouts-server cpp11/timeouts/server.cpp)
add_executable(cpp11-iostreams-http_client cpp11/iostreams/http_client.cpp)
add_executable(cpp11-operations-composed_5 cpp11/operations/composed_5.cpp)
add_executable(cpp11-operations-composed_4 cpp11/operations/composed_4.cpp)
add_executable(cpp11-operations-composed_6 cpp11/operations/composed_6.cpp)
add_executable(cpp11-operations-composed_7 cpp11/operations/composed_7.cpp)
add_executable(cpp11-operations-composed_3 cpp11/operations/composed_3.cpp)
add_executable(cpp11-operations-composed_2 cpp11/operations/composed_2.cpp)
add_executable(cpp11-operations-composed_1 cpp11/operations/composed_1.cpp)
add_executable(cpp11-operations-composed_8 cpp11/operations/composed_8.cpp)
add_executable(cpp11-local-fd_passing_stream_server cpp11/local/fd_passing_stream_server.cpp)
add_executable(cpp11-local-iostream_client cpp11/local/iostream_client.cpp)
add_executable(cpp11-local-stream_server cpp11/local/stream_server.cpp)
add_executable(cpp11-local-stream_client cpp11/local/stream_client.cpp)
add_executable(cpp11-local-fd_passing_stream_client cpp11/local/fd_passing_stream_client.cpp)
add_executable(cpp11-local-connect_pair cpp11/local/connect_pair.cpp)
add_executable(cpp11-executors-actor cpp11/executors/actor.cpp)
add_executable(cpp11-executors-pipeline cpp11/executors/pipeline.cpp)
add_executable(cpp11-executors-priority_scheduler cpp11/executors/priority_scheduler.cpp)
add_executable(cpp11-executors-bank_account_1 cpp11/executors/bank_account_1.cpp)
add_executable(cpp11-executors-bank_account_2 cpp11/executors/bank_account_2.cpp)
add_executable(cpp11-executors-fork_join cpp11/executors/fork_join.cpp)
file(GLOB SRC_CPP11_HTTP_SERVER cpp11/http/server/*.cpp)
add_executable(cpp11-http-server ${SRC_CPP11_HTTP_SERVER})
add_executable(cpp11-files-async_file_copy cpp11/files/async_file_copy.cpp)
add_executable(cpp11-files-blocking_file_copy cpp11/files/blocking_file_copy.cpp)
add_executable(cpp11-parallel_group-wait_for_all cpp11/parallel_group/wait_for_all.cpp)
add_executable(cpp11-parallel_group-ranged_wait_for_all cpp11/parallel_group/ranged_wait_for_all.cpp)
add_executable(cpp11-parallel_group-wait_for_one_success cpp11/parallel_group/wait_for_one_success.cpp)
add_executable(cpp11-parallel_group-wait_for_one_error cpp11/parallel_group/wait_for_one_error.cpp)
add_executable(cpp11-parallel_group-wait_for_one cpp11/parallel_group/wait_for_one.cpp)
# 下面这两个依赖boost
#add_executable(cpp11-spawn-echo_server cpp11/spawn/echo_server.cpp)
#add_executable(cpp11-spawn-parallel_grep cpp11/spawn/parallel_grep.cpp)
add_executable(cpp11-allocation-server cpp11/allocation/server.cpp)
add_executable(cpp17-coroutines_ts-echo_server_with_as_tuple_default cpp17/coroutines_ts/echo_server_with_as_tuple_default.cpp)
add_executable(cpp17-coroutines_ts-echo_server_with_default cpp17/coroutines_ts/echo_server_with_default.cpp)
add_executable(cpp17-coroutines_ts-echo_server cpp17/coroutines_ts/echo_server.cpp)
add_executable(cpp17-coroutines_ts-range_based_for cpp17/coroutines_ts/range_based_for.cpp)
add_executable(cpp17-coroutines_ts-echo_server_with_as_single_default cpp17/coroutines_ts/echo_server_with_as_single_default.cpp)
add_executable(cpp17-coroutines_ts-refactored_echo_server cpp17/coroutines_ts/refactored_echo_server.cpp)
add_executable(cpp17-coroutines_ts-chat_server cpp17/coroutines_ts/chat_server.cpp)
add_executable(cpp14-echo-blocking_tcp_echo_server cpp14/echo/blocking_tcp_echo_server.cpp)
add_executable(cpp14-echo-blocking_udp_echo_client cpp14/echo/blocking_udp_echo_client.cpp)
add_executable(cpp14-echo-async_udp_echo_server cpp14/echo/async_udp_echo_server.cpp)
add_executable(cpp14-echo-async_tcp_echo_server cpp14/echo/async_tcp_echo_server.cpp)
add_executable(cpp14-echo-blocking_udp_echo_server cpp14/echo/blocking_udp_echo_server.cpp)
add_executable(cpp14-echo-blocking_tcp_echo_client cpp14/echo/blocking_tcp_echo_client.cpp)
add_executable(cpp14-deferred-deferred_6 cpp14/deferred/deferred_6.cpp)
add_executable(cpp14-deferred-deferred_7 cpp14/deferred/deferred_7.cpp)
add_executable(cpp14-deferred-deferred_5 cpp14/deferred/deferred_5.cpp)
add_executable(cpp14-deferred-deferred_4 cpp14/deferred/deferred_4.cpp)
add_executable(cpp14-deferred-deferred_1 cpp14/deferred/deferred_1.cpp)
add_executable(cpp14-deferred-deferred_3 cpp14/deferred/deferred_3.cpp)
add_executable(cpp14-deferred-deferred_2 cpp14/deferred/deferred_2.cpp)
add_executable(cpp14-iostreams-http_client cpp14/iostreams/http_client.cpp)
add_executable(cpp14-operations-composed_5 cpp14/operations/composed_5.cpp)
add_executable(cpp14-operations-composed_4 cpp14/operations/composed_4.cpp)
add_executable(cpp14-operations-composed_6 cpp14/operations/composed_6.cpp)
add_executable(cpp14-operations-composed_7 cpp14/operations/composed_7.cpp)
add_executable(cpp14-operations-composed_3 cpp14/operations/composed_3.cpp)
add_executable(cpp14-operations-composed_2 cpp14/operations/composed_2.cpp)
add_executable(cpp14-operations-composed_1 cpp14/operations/composed_1.cpp)
add_executable(cpp14-operations-c_callback_wrapper cpp14/operations/c_callback_wrapper.cpp)
add_executable(cpp14-operations-callback_wrapper cpp14/operations/callback_wrapper.cpp)
add_executable(cpp14-operations-composed_8 cpp14/operations/composed_8.cpp)
add_executable(cpp14-executors-actor cpp14/executors/actor.cpp)
add_executable(cpp14-executors-pipeline cpp14/executors/pipeline.cpp)
add_executable(cpp14-executors-priority_scheduler cpp14/executors/priority_scheduler.cpp)
add_executable(cpp14-executors-bank_account_1 cpp14/executors/bank_account_1.cpp)
add_executable(cpp14-executors-async_1 cpp14/executors/async_1.cpp)
add_executable(cpp14-executors-bank_account_2 cpp14/executors/bank_account_2.cpp)
add_executable(cpp14-executors-async_2 cpp14/executors/async_2.cpp)
add_executable(cpp14-executors-fork_join cpp14/executors/fork_join.cpp)
add_executable(cpp14-parallel_group-wait_for_all cpp14/parallel_group/wait_for_all.cpp)
add_executable(cpp14-parallel_group-ranged_wait_for_all cpp14/parallel_group/ranged_wait_for_all.cpp)
add_executable(cpp14-parallel_group-parallel_sort cpp14/parallel_group/parallel_sort.cpp)
add_executable(cpp14-parallel_group-wait_for_one_success cpp14/parallel_group/wait_for_one_success.cpp)
add_executable(cpp14-parallel_group-wait_for_one_error cpp14/parallel_group/wait_for_one_error.cpp)
add_executable(cpp14-parallel_group-wait_for_one cpp14/parallel_group/wait_for_one.cpp)

set(EXECUTABLE_OUTPUT_PATH ${BINARY_OUTPUT_DIR})